# AnQst

./: .gitignore  README.md  bootstrap.sh  install_dependencies.sh
AnQst/: ImplementationDefectsAndFixPlan.md  Overview.md  README.md  WorkFlowExample.md  clean.sh
AnQst/AnQstGen/: .npmignore  README.md  index.d.ts  package.json  tsconfig.json
AnQst/AnQstGen/test-anqst-dsl/torture/anqst-cmake/: CMakeLists.txt
AnQst/AnQstGen/test-anqst-dsl/torture/cpp-smoke/: CMakeLists.txt  main.cpp
AnQst/AnQstWidget/AnQstWebBase/: CMakeLists.txt  CMakeUserPresets.json  README.md
AnQst/AnQstWidget/AnQstWebBase/src/: AnQstBase93.cpp  AnQstBase93.h  AnQstBridgeProxy.cpp  AnQstBridgeProxy.h  AnQstHostBridgeFacade.cpp  AnQstHostBridgeFacade.h  AnQstWebHostBase.cpp  AnQstWebHostBase.h  AnQstWidgetDebugDialog.cpp  AnQstWidgetDebugDialog.h  AngularHttpBaseServer.cpp  AngularHttpBaseServer.h
AnQst/AnQstWidget/AnQstWebBase/src/UI/: AnQstWidgetDebugDialog.ui
AnQst/AnQstWidget/AnQstWebBase/tests/: CMakeLists.txt  test_AnQstWebHostBase.cpp
AnQst/Examples/: CMakeLists.txt  build.sh
AnQst/Examples/demo/: CMakeLists.txt  DemoMainWindow.ui  main.cpp
AnQst/Examples/demo/lib/demo-widget/: DemoHostWidget.AnQst.d.ts  README.md  angular.json  package.json
AnQst/Examples/demo/lib/demo-widget/anqst-cmake/: CMakeLists.txt
AnQst/Examples/demo/lib/demo-widget/src/: index.html
AnQst/Examples/demo/lib/demo-widget/src/anqst-generated/: index.ts  package.json
AnQst/Examples/demo/lib/demo-widget/src/anqst-generated/types/: index.d.ts
AnQst/Examples/demo/lib/demo-widget/src/app/: app.css  app.html  app.spec.ts  app.ts
AnQst/Examples/example-qt-app/: CMakeLists.txt  DraggableCdListWidget.cpp  DraggableCdListWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  headless_smoke.sh  main.cpp  rebuild.sh  run_headless.sh
AnQst/Examples/example-qt-app/lib/widgets/: README.md  build-vanilla-widgets.sh
AnQst/Examples/example-qt-app/lib/widgets/CdEntryEditor/: .gitignore  CdEntryEditor.AnQst.d.ts  README.md  angular.json  package-lock.json  package.json  tsconfig.json
AnQst/Examples/example-qt-app/lib/widgets/CdEntryEditor/AnQst/: CdEntryEditor.AnQst.d.ts  CdEntryEditor.settings.json  README.md
AnQst/Examples/example-qt-app/lib/widgets/CdEntryEditor/anqst-cmake/: CMakeLists.txt
AnQst/Examples/example-qt-app/lib/widgets/CdEntryEditor/anqst-cmake/designerplugin/: CMakeLists.txt  CdEntryEditorDesignerPlugin.cpp  designerplugin.qrc
AnQst/Examples/example-qt-app/lib/widgets/CdEntryEditor/anqst-dsl/: AnQst-Spec-DSL.d.ts
AnQst/Examples/example-qt-app/lib/widgets/CdEntryEditor/generated_output/CdEntryEditor_QtWidget/: CMakeLists.txt  CdEntryEditor.cpp  CdEntryEditor.qrc
AnQst/Examples/example-qt-app/lib/widgets/CdEntryEditor/generated_output/CdEntryEditor_QtWidget/include/: CdEntryEditor.h  CdEntryEditorTypes.h
AnQst/Examples/example-qt-app/lib/widgets/CdEntryEditor/generated_output/CdEntryEditor_QtWidget/webapp/: index.html  main-OJTL3JJZ.js
AnQst/Examples/example-qt-app/lib/widgets/CdEntryEditor/generated_output/npmpackage/types/: index.d.ts
AnQst/Examples/example-qt-app/lib/widgets/CdEntryEditor/src/: index.html
AnQst/Examples/example-qt-app/lib/widgets/CdEntryEditor/src/anqst-generated/: index.js  index.ts  package.json
AnQst/Examples/example-qt-app/lib/widgets/CdEntryEditor/src/anqst-generated/types/: index.d.ts
AnQst/Examples/example-qt-app/lib/widgets/CdEntryEditor/src/app/: app.css  app.html  app.spec.ts  app.ts  cd-draft.ts
AnQst/Examples/example-qt-app/lib/widgets/CdEntryEditor/types/: User.ts
AnQst/Examples/example-qt-app/lib/widgets/VanillaJsWidget/: angular.json  package.json  tsconfig.json
AnQst/Examples/example-qt-app/lib/widgets/VanillaJsWidget/AnQst/: Magic.d.ts  VanillaJsWidget.AnQst.d.ts  VanillaJsWidget.settings.json
AnQst/Examples/example-qt-app/lib/widgets/VanillaJsWidget/src/: index.html  main.js
AnQst/Examples/example-qt-app/lib/widgets/VanillaJsWidget/src/app/: app.css  app.html  app.spec.ts  app.ts
AnQst/Examples/example-qt-app/lib/widgets/VanillaTsWidget/: angular.json  build-frontend.mjs  package.json  tsconfig.json
AnQst/Examples/example-qt-app/lib/widgets/VanillaTsWidget/AnQst/: VanillaTsWidget.AnQst.d.ts  VanillaTsWidget.settings.json
AnQst/Examples/example-qt-app/lib/widgets/VanillaTsWidget/src/: index.html  main.ts  styles.css
AnQst/Examples/example-qt-app/lib/widgets/VanillaTsWidget/src/app/: app.css  app.html  app.ts
AnQst/Examples/example_comprehension_proof/: SingleCdEntryEditorSpec.AnQst.d.ts  SingleCdEntryEditorSpec.md
AnQst/Examples/example_comprehension_proof/types/: User.ts
AnQst/Examples/webapp/: run_server.sh
AnQst/Examples/webapp/backend/: package.json  tsconfig.json
AnQst/Examples/webapp/backend/public/www/: index.html
AnQst/Examples/webapp/backend/src/: bridge-sync.ts  server.ts  user-management-implementation.ts  user-management-state.ts
AnQst/Examples/webapp/frontend/: UserManagement.AnQst.d.ts  angular.json  package.json  tsconfig.json
AnQst/Examples/webapp/frontend/.angular/cache/21.2.0/webapp-frontend/: .tsbuildinfo  angular-compiler.db  angular-compiler.db-lock
AnQst/Examples/webapp/frontend/AnQst/: README.md  UserManagement.AnQst.d.ts  UserManagement.settings.json
AnQst/Examples/webapp/frontend/anqst-cmake/: CMakeLists.txt
AnQst/Examples/webapp/frontend/src/: index.html  styles.css
AnQst/Examples/webapp/frontend/src/app/: app.css  app.html  app.ts
AnQst/GapAnalysis/: 01-Doc-Stronger-Than-Impl.md  02-Impl-Stronger-Than-Doc.md  03-Gap-Matrix.md  README.md  architecture-flow.html  gap-overview.html
AnQst/OverhaulPlan/: 01-Current-State.md  02-Target-Architecture.md  03-Migration-Phases.md  README.md  structure-diagram.html
AnQst/QtWidgetDebugSpec/: 00-Agent-Operating-Protocol.md  01-System-Code-Map.md  02-Current-Architecture-Spec-TSC-QtWidget.md  03-QtWidget-Debug-Reality-Today.md  README.md
AnQst/RefinedSpecs/: 01-DSL-Structure-and-Validity.md  02-Interaction-Semantics.md  03-Generator-Output-Contracts.md  04-Canonical-UserManagement-Example.md  Spec-Alignment-Review.md
(+217 files in other folders)
